Use binary data to store animation keyframes

Store Keyframe elements data in a binary file instead of directly
in the QML file. This reduces QML file size significantly and
speed up loading time as well.

Using CBOR binary format documented in Qt Quick Timeline module.

Task-number: QTBUG-85148
Change-Id: Iced852065089c3e33eff5e1e6fb0c8fb974924e3
Reviewed-by: Andy Nichols <andy.nichols@qt.io>